unpackaged/main/default/objects/Action__c/fields/Action_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Action_Batch_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Action batch record</inlineHelpText>
    <label>Action Batch ID</label>
    <referenceTo>Action_Batch__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>