unpackaged/main/default/objects/Action__c/fields/ActionCode__c.field-meta.xml
<CustomField>
    <fullName>ActionCode__c</fullName>
    <formula>Action_Code__r.Action_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Code</label>
    <type>Text</type>
</CustomField>