unpackaged/main/default/objects/Action__c/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Code</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>