unpackaged/main/default/objects/Action__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>