unpackaged/main/default/objects/Action__c/fields/Legacy_Batch__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Legacy Batch</label>
    <referenceTo>Legacy_Batch__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions_Legacy_Batch</relationshipName>
    <type>Lookup</type>
</CustomField>