unpackaged/main/default/objects/Action__c/fields/Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Processed_By__c</fullName>
    <label>Processed By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Donor Records</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>Merkle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>