unpackaged/main/default/objects/Action__c/fields/Processed_Through__c.field-meta.xml
<CustomField>
    <fullName>Processed_Through__c</fullName>
    <inlineHelpText>System through which the action was first recorded</inlineHelpText>
    <label>Processed Through</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Common Ground</fullName>
            </value>
            <value>
                <fullName>Convio Online Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>