unpackaged/main/default/objects/Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Donor__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Processed_Through__c</columns>
    <columns>Processed_By__c</columns>
    <columns>Response_Channel__c</columns>
    <columns>ActionCode__c</columns>
    <columns>Action_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>